--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,8 @@
 steps:
   - label: ":info: Print info"
     command: "./.buildkite/scripts/info.sh"
-  - trigger: continue
+  - trigger: 
+    label: "continue"
   - label: ":golang: Running linters."
     command: "./.buildkite/scripts/format.sh"
   - label: ":golang: Running unit tests."
