--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,9 +1,9 @@
 steps:
   - label: ":information_source: Print info"
     command: "./.buildkite/scripts/info.sh"
-  - block: ":golang: test"
   - label: ":golang: Running linters."
-    command: "./.buildkite/scripts/format.sh"
+    command: "./scripts/lint.sh"
+  - block: ":golang: test"
   - label: ":golang: Running unit tests."
     command: "./.buildkite/scripts/test.sh 'unit'"
   - label: ":golang: Running integration tests."
