--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,12 +2,12 @@ steps:
   - label: ":information_source: Print info"
     command: "./.buildkite/scripts/info.sh"
   - label: ":docker: Build and push development image"
-    command: "./scripts/build_dev_image.sh"
+    command: "./.buildkite/scripts/build_dev_image.sh"
   - block: ":golang: test"
   - label: ":golang: Running linters."
-    command: "./scripts/lint.sh"
+    command: "./.buildkite/scripts/lint.sh"
   - label: ":golang: Running unit tests."
-    command: "./scripts/test.sh 'unit'"
+    command: "./.buildkite/scripts/test.sh 'unit'"
   - label: ":golang: Running integration tests."
-    command: "./scripts/test.sh 'integration'"
+    command: "./.buildkite/scripts/test.sh 'integration'"
 
